display exercise challenge

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,13 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+<main>
+  <div class="upper upper-left"></div>
+  <div class="upper upper-right"></div>
+  <div class="lower lower-left"></div>
+  <div class="lower lower-center"></div>
+  <div class="lower lower-right"></div>
+</main>
+
 </body>
 </html>
